2015-04-20  Natalia Portillo  <claunia@claunia.com>

	* PartPlugins/RDB.cs:
	  Typo submerged in infinite loop for non-RDB disks.

2015-04-20  Natalia Portillo  <claunia@claunia.com>

	* Plugins/BFS.cs:
	* Plugins/ODS.cs:
	* Plugins/FFS.cs:
	* Plugins/FAT.cs:
	* Plugins/NTFS.cs:
	* Plugins/HPFS.cs:
	* Plugins/SysV.cs:
	* Plugins/Opera.cs:
	* Plugins/extFS.cs:
	* Plugins/LisaFS.cs:
	* Plugins/ProDOS.cs:
	* Plugins/ext2FS.cs:
	* Plugins/Plugin.cs:
	* Plugins/SolarFS.cs:
	* Plugins/UNIXBFS.cs:
	* Plugins/ISO9660.cs:
	* Plugins/MinixFS.cs:
	* Plugins/PCEngine.cs:
	* Plugins/AppleMFS.cs:
	* Plugins/AppleHFS.cs:
	* Commands/Analyze.cs:
	* Plugins/AppleHFSPlus.cs:
	  Give not only partition starting sector but also ending
	  sector to filesystems.

2015-04-20  Natalia Portillo  <claunia@claunia.com>

	* PartPlugins/RDB.cs:
	* DiscImageChef.csproj:
	  Implemented support for Amiga RDB.

2015-04-19  Natalia Portillo  <claunia@claunia.com>

	* Plugins/ProDOS.cs:
	  Corrected datetime field handling in ProDOS filesystem.

2015-04-19  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugins/2MG.cs:
	* DiscImageChef.csproj:
	* ImagePlugins/Apple2MG.cs:
	  Implement support for Apple 2IMG disk images.

2015-04-19  Natalia Portillo  <claunia@claunia.com>

	* Options.cs:
	* Commands/Checksum.cs:
	* DiscImageChef.csproj:
	* Checksums/SpamSumContext.cs:
	  Implemented SpamSum fuzzy hashing.

2015-04-19  Natalia Portillo  <claunia@claunia.com>

	* Options.cs:
	* Commands/Checksum.cs:
	* DiscImageChef.csproj:
	* Checksums/FletcherContext.cs:
	  Implemented Fletcher-16 and Fletcher-32 checksum algorithms.

2015-04-19  Natalia Portillo  <claunia@claunia.com>

	* Options.cs:
	* Commands/Checksum.cs:
	  Added CRC16 to checksum command.

2015-04-19  Natalia Portillo  <claunia@claunia.com>

	* Options.cs:
	* Commands/Checksum.cs:
	* DiscImageChef.csproj:
	* Checksums/Adler32Context.cs:
	  Added Adler-32 checksum

2015-03-22  Natalia Portillo  <claunia@claunia.com>

	* Plugins/ProDOS.cs: