@@ -1,5 +1,12 @@
 2015-04-20  Natalia Portillo  <claunia@claunia.com>
 
+	* DateHandlers.cs:
+	* Plugins/AmigaDOS.cs:
+	* DiscImageChef.csproj:
+	  Added support for AmigaDOS filesystems.
+
+2015-04-20  Natalia Portillo  <claunia@claunia.com>
+
 	* PartPlugins/RDB.cs:
 	  Typo submerged in infinite loop for non-RDB disks.
 
